[gd_scene load_steps=6 format=3 uid="uid://cc0e32xw5m8ck"]

[ext_resource type="Script" path="res://src/screens/connection_room/connection_room.gd" id="1_ppn1t"]
[ext_resource type="PackedScene" uid="uid://dl4p6r0wd81bi" path="res://src/components/loader/loader.tscn" id="2_4jj84"]
[ext_resource type="FontFile" uid="uid://gwgx5sp0s20n" path="res://assets/fonts/fffforward.ttf" id="2_eas2v"]
[ext_resource type="PackedScene" uid="uid://d4nve683ejjry" path="res://src/network/controllers/rooms_controller/rooms_controller.tscn" id="3_cplwo"]
[ext_resource type="PackedScene" uid="uid://c3yt0tybymylk" path="res://src/network/network_client/network_client.tscn" id="4_vo08w"]

[node name="ConnectionRoom" type="Node2D"]
script = ExtResource("1_ppn1t")

[node name="Loader" parent="." instance=ExtResource("2_4jj84")]
position = Vector2(595, 985)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = 500.0
offset_right = 795.0
offset_bottom = 555.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_eas2v")
theme_override_font_sizes/font_size = 40
text = "Enter room key"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 375.0
offset_top = 600.0
offset_right = 825.0
offset_bottom = 700.0
theme_override_fonts/font = ExtResource("2_eas2v")
theme_override_font_sizes/font_size = 40
placeholder_text = "12345678"
alignment = 1
max_length = 8

[node name="Button" type="Button" parent="."]
offset_left = 475.0
offset_top = 790.0
offset_right = 728.0
offset_bottom = 880.0
theme_override_fonts/font = ExtResource("2_eas2v")
theme_override_font_sizes/font_size = 40
text = "connect"

[node name="RoomsController" parent="." instance=ExtResource("3_cplwo")]

[node name="NetworkClient" parent="." instance=ExtResource("4_vo08w")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
